Closed
Bug 1782338
Opened 2 years ago
Closed 2 years ago
Fix non-unified debug build errors in netwerk/protocol/http
Categories
(Core :: Networking: HTTP, defect, P3)
Core
Networking: HTTP
Tracking
()
RESOLVED
FIXED
105 Branch
Tracking | Status | |
---|---|---|
firefox-esr91 | --- | unaffected |
firefox-esr102 | --- | unaffected |
firefox103 | --- | unaffected |
firefox104 | --- | unaffected |
firefox105 | --- | fixed |
People
(Reporter: cpeterson, Assigned: cpeterson)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
Bug 1767609 broke non-unified debug builds because some debug MOZ_ASSERT()
s call OnSocketThread()
but the .cpp files don't directly #include the header file with the OnSocketThread()
function declaration.
netwerk/protocol/http/Http2Stream.cpp:204:14: error: use of undeclared identifier 'OnSocketThread'
MOZ_ASSERT(OnSocketThread(), "not on socket thread");
^
Updated•2 years ago
|
Keywords: regression
Assignee | ||
Updated•2 years ago
|
Assignee | ||
Comment 1•2 years ago
|
||
Bug 1767609 broke non-unified debug builds because some debug MOZ_ASSERT()s call OnSocketThread() but the .cpp files don't directly #include the header file with the OnSocketThread() function declaration.
netwerk/protocol/http/Http2Stream.cpp:204:14: error: use of undeclared identifier 'OnSocketThread'
MOZ_ASSERT(OnSocketThread(), "not on socket thread");
^
Pushed by cpeterson@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/bde54a00f7aa
Fix non-unified debug build errors in netwerk/protocol/http. r=necko-reviewers,kershaw
Comment 3•2 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 105 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•