Bug 1782338 - Fix non-unified debug build errors in netwerk/protocol/http. r=necko-reviewers,kershaw

Bug 1767609 broke non-unified debug builds because some debug MOZ_ASSERT()s call OnSocketThread() but the .cpp files don't directly #include the header file with the OnSocketThread() function declaration.

netwerk/protocol/http/Http2Stream.cpp:204:14: error: use of undeclared identifier 'OnSocketThread'

MOZ_ASSERT(OnSocketThread(), "not on socket thread");
           ^

Differential Revision: https://phabricator.services.mozilla.com/D153303